--- a/MineareaUpdater/prismlauncher/instance.cfg
+++ b/MineareaUpdater/prismlauncher/instance.cfg
@@ -10,7 +10,7 @@ EnableFeralGamemode=false
 EnableMangoHud=false
 IgnoreJavaCompatibility=false
 InstanceAccountId=
-JavaPath=C:/Program Files/Common Files/Oracle/Java/javapath/javaw.exe
+JavaPath=C:/Program Files/Java/jdk-17/bin/javaw.exe
 JoinServerOnLaunch=true
 JoinServerOnLaunchAddress=46.138.242.20:27015
 JvmArgs=
