--- a/MineareaUpdater/prismlauncher/instance.cfg
+++ b/MineareaUpdater/prismlauncher/instance.cfg
@@ -1,7 +1,7 @@
 [General]
 ConfigVersion=1.2
 iconKey=minearea2k20_avatar
-name=BetterMC
+name=MineArea 1.19.2
 AutoCloseConsole=true
 CloseAfterLaunch=false
 InstanceType=OneSix
