--- a/MineareaUpdater/prismlauncher/instance.cfg
+++ b/MineareaUpdater/prismlauncher/instance.cfg
@@ -1,6 +1,6 @@
 [General]
 ConfigVersion=1.2
-iconKey=minearea2k20_avatar
+iconKey=minearea
 name=MineArea 1.19.2
 AutoCloseConsole=false
 CloseAfterLaunch=false
