--- a/MineareaUpdater/prominence/instance.cfg
+++ b/MineareaUpdater/prominence/instance.cfg
@@ -1,7 +1,7 @@
 [General]
 ConfigVersion=1.2
 iconKey=meat
-name=Prominence II [RPG]
+name=Prominence2
 JavaPath=C:/Program Files/Java/jdk-18.0.2.1/bin/javaw.exe
 RecordGameTime=true
 ShowConsole=false
