--- a/MineareaUpdater/prominence/instance.cfg
+++ b/MineareaUpdater/prominence/instance.cfg
@@ -7,3 +7,54 @@ RecordGameTime=true
 ShowConsole=false
 ShowConsoleOnError=true
 ShowGameTime=true
+InstanceType=OneSix
+JoinServerOnLaunch=false
+OverrideCommands=false
+OverrideConsole=false
+OverrideGameTime=false
+OverrideJavaArgs=false
+OverrideJavaLocation=false
+OverrideMemory=false
+OverrideMiscellaneous=false
+notes=
+OverrideModLoaderSettings=false
+OverrideNativeWorkarounds=false
+OverridePerformance=false
+OverrideWindow=false
+UseAccountForInstance=false
+AutoCloseConsole=false
+CloseAfterLaunch=false
+DisableQuiltBeacon=false
+EnableFeralGamemode=false
+EnableMangoHud=false
+IgnoreJavaCompatibility=false
+InstanceAccountId=
+JoinServerOnLaunchAddress=
+JvmArgs=
+LaunchMaximized=false
+LogPrePostOutput=true
+MCLaunchMethod=LauncherPart
+ManagedPack=false
+ManagedPackID=
+ManagedPackName=
+ManagedPackType=
+ManagedPackVersionID=
+ManagedPackVersionName=
+MaxMemAlloc=4096
+MinMemAlloc=512
+MinecraftWinHeight=480
+MinecraftWinWidth=854
+OverrideJava=false
+OverrideMCLaunchMethod=false
+PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+QuitAfterGameStop=false
+UseDiscreteGpu=false
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
+lastLaunchTime=0
+lastTimePlayed=26
+linkedInstances=[]
+totalTimePlayed=262
