--- a/MineareaUpdater/prominence/instance.cfg
+++ b/MineareaUpdater/prominence/instance.cfg
@@ -1,8 +1,8 @@
 [General]
 ConfigVersion=1.2
 iconKey=meat
-name=Prominence II [RPG]
-JavaPath=C:/Program Files/Java/jdk-18.0.2.1/bin/javaw.exe
+name=Prominence II 2.6.5
+JavaPath=C:/Program Files/Eclipse Adoptium/jdk-18.0.2.101-hotspot/bin/javaw.exe
 RecordGameTime=true
 ShowConsole=false
 ShowConsoleOnError=true
@@ -54,7 +54,7 @@ UseDiscreteGpu=false
 UseNativeGLFW=false
 UseNativeOpenAL=false
 WrapperCommand=
-lastLaunchTime=0
-lastTimePlayed=26
+lastLaunchTime=
+lastTimePlayed=
 linkedInstances=[]
-totalTimePlayed=262
+totalTimePlayed=
